added some missing parts

--- a/portfolio-app/index.html
+++ b/portfolio-app/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="stat-item">
                         <i class="fas fa-award"></i>
-                        <div class="stat-number">8</div>
+                        <div class="stat-number">3</div>
                         <p>AWS Certifications</p>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                         <i class="fab fa-aws"></i>
                         <h3>Cloud Infrastructure (AWS)</h3>
                     </div>
-                    <p>Designing and managing scalable cloud infrastructure using AWS services like EC2, EKS, RDS, and Lambda.</p>
+                    <p>Designing and managing scalable cloud infrastructure using AWS services like EC2, ECR, EKS, IAM, S3, and Lambda.</p>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 90%;"></div>
                     </div>
@@ -106,7 +106,7 @@
                         <i class="fas fa-code-branch"></i>
                         <h3>CI/CD Pipelines</h3>
                     </div>
-                    <p>Building automated deployment pipelines using Jenkins, GitHub Actions, and GitLab CI.</p>
+                    <p>Building automated deployment pipelines using Jenkins, GitHub Actions, and TeamCity.</p>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 85%;"></div>
                     </div>
@@ -126,7 +126,7 @@
                         <i class="fas fa-cogs"></i>
                         <h3>Infrastructure as Code</h3>
                     </div>
-                    <p>Automating infrastructure provisioning using Terraform, CloudFormation, and Ansible.</p>
+                    <p>Automating infrastructure provisioning using Terraform and Ansible.</p>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 82%;"></div>
                     </div>
@@ -136,7 +136,7 @@
                         <i class="fas fa-chart-line"></i>
                         <h3>Monitoring & Observability</h3>
                     </div>
-                    <p>Implementing monitoring solutions with CloudWatch, Prometheus, Grafana, and ELK stack.</p>
+                    <p>Implementing monitoring solutions with CloudWatch, Prometheus, and Grafana</p>
                     <div class="skill-bar">
                         <div class="skill-progress" style="width: 80%;"></div>
                     </div>
@@ -186,8 +186,6 @@
                         <div class="project-tags">
                             <span class="tag">GitHub Actions</span>
                             <span class="tag">Docker</span>
-                            <span class="tag">SonarQube</span>
-                            <span class="tag">ArgoCD</span>
                         </div>
                         <a href="#" class="btn" style="padding: 8px 20px; font-size: 0.9rem;">View Details</a>
                     </div>
@@ -197,7 +195,7 @@
                         <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=1770&q=80" alt="Monitoring Dashboard">
                     </div>
                     <div class="project-content">
-                        <h3>Infrastructure Monitoring Stack</h3>
+                        <h3>Infrastructure Monitoring</h3>
                         <p>Comprehensive monitoring solution using Prometheus, Grafana, and CloudWatch for real-time infrastructure and application monitoring.</p>
                         <div class="project-tags">
                             <span class="tag">Prometheus</span>
@@ -273,8 +271,8 @@
             <a href="#home" class="logo" style="color: white;">Port<span style="color: #60a5fa;">folio</span></a>
             <p style="margin: 1.5rem 0; max-width: 600px; margin-left: auto; margin-right: auto;">Passionate DevOps Engineer automating infrastructure and building reliable, scalable systems. Let's optimize your cloud journey together!</p>
             <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/AjayKumar9375/My-Portfolio-Web-App.git"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/ajay-kumar-7bb101173?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BeEeYXC4aT6m8OU7%2FCecmIA%3D%3D"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
