updated project section

--- a/portfolio-app/index.html
+++ b/portfolio-app/index.html
@@ -182,9 +182,9 @@
                     </div>
                     <div class="project-content">
                         <h3>Multi-Environment CI/CD Pipeline</h3>
-                        <p>Complete CI/CD pipeline using GitHub Actions with automated testing, security scanning, and deployment to multiple environments.</p>
+                        <p>Complete CI/CD pipeline using Jenkins with automated testing, security scanning, and deployment to DockerHub and multiple environments.</p>
                         <div class="project-tags">
-                            <span class="tag">GitHub Actions</span>
+                            <span class="tag">Jenkins</span>
                             <span class="tag">Docker</span>
                         </div>
                         <a href="#" class="btn" style="padding: 8px 20px; font-size: 0.9rem;">View Details</a>
